make left bar be position:fixed
This makes some search results spill off the bottom on some
screen sizes, but that's okay because the search results are
arbitrarily limited to 20 anyway.  Also the poorly maintained
disclaimer may spill off the bottom.

--- a/hilarious.css
+++ b/hilarious.css
@@ -26,9 +26,10 @@ body {
   min-height: 100%;
   width: 20em;
   background-color: #cfe;
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
+  bottom: 0;
 }
 .textarea_with_linenos {
   xposition: absolute;
